# process-uidt

./: README.md  pyproject.toml
src/: main.py
src/initializer/: argparser.py  initializer.py
src/observer/: observer.py
src/plotter/: plotter.py
src/processing/: peak_finder.py  precessor.py  processor.py  stats_computer.py
src/saver/: peak_saver.py  plotter.py
test_path/: exp_02_04_2025__16_55_46__468.csv  params.yaml
