[tool.poetry]
name = "process-uidt"
version = "0.1.1"
description = ""
authors = ["fosghen <r.efremov2@g.nsu.ru>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
polars = "^1.29.0"
joblib = "^1.4.2"
matplotlib = "^3.10.1"
watchdog = "^6.0.0"
pydantic = "^2.11.4"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
process-uidt = "src.main:main"